--- a/style.css
+++ b/style.css
@@ -912,15 +912,18 @@ object {
 #masthead {
 	background: #83A7BC;
 	margin: 2em;
+	opacity: 0.8;
 }
 #content {
 	background: #83A7BC;
 	margin: 2em;
 	padding: 1em;
+	opacity: 0.8;
 }
 #colophon {
 	background: #83A7BC;
 	padding-top: 1em;
+	opacity: 0.8;
 }
 
 .site-title {
